# document_orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-start.sh  pyproject.toml  run.sh  test.sh
config/: example.json
database/: schema.sql
docs/: API.md  ARCHITECTURE_DIAGRAMS.md  BUILD_ORDER.md  DOCKER_DEPLOYMENT.md  MODEL_PORTABILITY.md  Overview.md  PERSISTENCE.md  REPO_STRUCTURE.md
examples/: run_demo.py  sample_document_run_request.json  sample_evidence_pack.json
exports/: JCL_ANALYSIS_BILLRUN1_JCL_Analysis_5c066147-df38-4bed-a26b-dee17ef67d5c.md  JCL_ANALYSIS_BILLRUN1_JCL_Analysis_e70052b2-c1dc-46d8-a1ef-7740ce889cb8.md  JCL_ANALYSIS_PMTRUN7_JCL_Analysis_6c73602a-e58d-4e8f-882a-a2144e9cbb4a.md  JCL_ANALYSIS_PMTRUN7_JCL_Analysis_9389a21b-a801-4cd8-9f78-c122cde058a6.md  JCL_ANALYSIS_PMTRUN7_JCL_Analysis_fd7801fb-f023-4655-8803-f3d58f3b4894.md
mainframe_doc_orchestrator/: __init__.py  assembler.py  cli.py  contracts.py  models.py  orchestrator.py  planner.py  prompt_library.py  serialization.py  settings.py  validator.py
mainframe_doc_orchestrator/api/: __init__.py  app.py  dependencies.py  schemas.py
mainframe_doc_orchestrator/clients/: __init__.py  llm_clients.py  retrieval_client.py
mainframe_doc_orchestrator/persistence/: __init__.py  models.py  repositories.py
mainframe_doc_orchestrator/schemas/: document_draft.schema.json  document_plan.schema.json  document_request.schema.json  evidence_pack.schema.json
scripts/: migrate.py
tests/: test_api_smoke.py  test_smoke.py
(+9 files in other folders)
