[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mainframe-doc-orchestrator"
version = "0.2.0"
description = "System Appreciation Document orchestrator for mainframe RAG evidence packs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.1.0",
  "httpx>=0.27.0",
  "boto3>=1.34.0",
  "markdown>=3.6",
]

[tool.setuptools]
packages = [
  "mainframe_doc_orchestrator",
  "mainframe_doc_orchestrator.clients",
  "mainframe_doc_orchestrator.api",
  "mainframe_doc_orchestrator.api.routes",
  "mainframe_doc_orchestrator.persistence",
  "mainframe_doc_orchestrator.services",
]
